# ug2extract

./: CMakeLists.txt  README.md  compile.bat
include/: chunk.h  geometry.h  utils.h
src/: chunk.cpp  main.cpp  utils.cpp
